# 2023-techie-table-quiz

./: .gitignore  README.md  devbox.json  justfile  pyproject.toml  questions_and_answers.yaml
output/answers/quiz/: quiz.md
output/answers/round_1/: round_1_answers.md
output/answers/round_2/: round_2_answers.md
output/answers/round_3/: round_3_answers.md
output/answers/round_4/: round_4_answers.md
output/answers/tie-breaker/: tie-breaker_answers.md
output/questions/quiz/: quiz.md
output/questions/round_1/: round_1_questions.md
output/questions/round_2/: round_2_questions.md
output/questions/round_3/: round_3_questions.md
output/questions/round_4/: round_4_questions.md
output/questions/tie-breaker/: tie-breaker_questions.md
techie_table_quiz/: main.py  quiz.py
templates/: all_rounds_answers.md  all_rounds_questions.md  deckset_osascript.applescript  round_answers.md  round_questions.md
templates/macros/: question.md  theme.md
